# autopilot

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile  NEWS  README  config.status  configure  configure.ac  todo.list  todo.list~
src/: Makefile  Makefile.am  Makefile.in  autopilot  autopilot.c  autopilot_test.c
src/.deps/: atp_command_listener.Po  atp_command_manager.Po  atp_input.Po  atp_log.Po  atp_motor.Po  atp_motor_controller.Po  atp_pilot.Po  atp_queue.Po  atp_service_system.Po  atp_services_gps.Po  atp_thread.Po  autopilot.Po  autopilot_test.Po
src/algorithms/: MadgwickAHRS.c  MadgwickAHRS.h  MahonyAHRS.c  atleastsquare.c  atleastsquare.h  kalman.c  kalman.h  simpleahrs.c  simpleahrs.h
src/command/: atp_command.h
src/common/: atp_common.h  atp_queue.c  atp_queue.h  atp_system_lock.c  atp_system_lock.h  atp_time.c  atp_time.h
src/controllers/: atp_motor.c  atp_motor.h  atp_motor_controller.c  atp_motor_controller.h
src/input/: atp_input.c  atp_input.h
src/log/: atp_log.c  atp_log.h
src/manager/: atp_command_listener.c  atp_command_listener.h  atp_command_manager.c  atp_command_manager.h  atp_pilot.c  atp_pilot.h
src/modules/: module_Adafruit_BMP085.c  module_Adafruit_BMP085.h  module_Adafruit_L3GD20.c  module_Adafruit_L3GD20.h  module_Adafruit_LSM303.c  module_Adafruit_LSM303.h  module_Adafruit_PCA9685.c  module_Adafruit_PCA9685.h  module_HC_SR04.c  module_HC_SR04.h  module_UBlox_neo6v.c  module_UBlox_neo6v.h  module_common.c  module_common.h  temp.l3gd  temp.lsm303
src/octave/: analyzer.m  calibration.m  calibration.m~  (+7 more)
(+40 files in other folders)
