bin_PROGRAMS=autopilot
autopilot_SOURCES=autopilot.c autopilot_test.c manager/atp_pilot.c manager/atp_command_manager.c manager/atp_command_listener.c input/atp_input.c services/atp_service_system.c services/atp_services_gps.c log/atp_log.c thread/atp_thread.c common/atp_queue.c controllers/atp_motor_controller.c controllers/atp_motor.c services/atp_services_ahrs.c modules/module_Adafruit_LSM303.c modules/module_Adafruit_L3GD20.c modules/module_Adafruit_BMP085.c
AM_CFLAGS=-I/work/projects/tobor/libtobor_io/include 
AM_LDFLAGS=-L/work/projects/tobor/libtobor_io/libtoborio/.libs -ltoborio -lpthread -lm

