bin_PROGRAMS=autopilot
autopilot_SOURCES=autopilot.c autopilot_test.c manager/atp_pilot.c  input/atp_input.c services/atp_service_system.c services/atp_services_gps.c log/atp_log.c thread/atp_thread.c common/atp_queue.c controllers/atp_motor_controller.c controllers/atp_motor.c services/atp_services_ahrs.c modules/module_Adafruit_LSM303.c modules/module_Adafruit_L3GD20.c modules/module_Adafruit_BMP085.c modules/module_Adafruit_PCA9685.c modules/module_common.c modules/module_UBlox_neo6v.c algorithms/MahonyAHRS.c algorithms/MadgwickAHRS.c common/atp_time.c common/atp_system_lock.c settings/atp_settings.c task/atp_task_listener.c task/atp_task_manager.c task/atp_task.c task/atp_task_echo.c  
AM_CFLAGS=-I/work/projects/tobor/libtobor_io/include 
AM_LDFLAGS=-L/work/projects/tobor/libtobor_io/libtoborio/.libs -ltoborio -lpthread -lm

